--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=job4j_tracker2
+url=jdbc:postgresql://localhost:5432/Tracker
+username=tracker
+password=123456
+
+driver-class-name=org.postgresql.Driver
+liquibase.change-log=classpath:liquibase/changelog-master.yml
